Velcro test First SandBox/src/objects/Quote_Line__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <description>Lead time, in working days</description>
        <inlineHelpText>Lead time, in working days</inlineHelpText>
        <label>Lead Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minimun_Order_Quantity__c</fullName>
        <description>Minimun_Order_Quantity</description>
        <inlineHelpText>Minimun_Order_Quantity</inlineHelpText>
        <label>Minimun Order Quantity</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presented__c</fullName>
        <description>Presentation of the product ( boxes, pallets, rolls..)</description>
        <inlineHelpText>Presentation of the product ( boxes, pallets, rolls..)</inlineHelpText>
        <label>Presented</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units_of_measure__c</fullName>
        <label>Units of measure</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>Inches</fullName>
                </value>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Pcs</fullName>
                </value>
                <value>
                    <fullName>Roll</fullName>
                </value>
                <value>
                    <fullName>Sets</fullName>
                </value>
                <value>
                    <fullName>Sq Meters</fullName>
                </value>
                <value>
                    <fullName>Sq Yards</fullName>
                </value>
                <value>
                    <fullName>Yards</fullName>
                </value>
                <value>
                    <fullName>Bag</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Quote Line</label>
    <nameField>
        <displayFormat>QL-{00000000}</displayFormat>
        <label>Quote Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>